envoy.yaml
static_resources:
  listeners:
  - name: restlistener
    address:
      socket_address: { address: 0.0.0.0, port_value: 51051 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: grpc_json
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: grpcserver, timeout: { seconds: 60 } } 
          http_filters:                                                         
          - name: envoy.grpc_json_transcoder
            config:
              proto_descriptor: "/tmp/envoy/proto.pb"
              services: ["com.iphayao.grpc.service.HRService"]
              print_options:
                add_whitespace: true
                always_print_primitive_fields: true
                always_print_enums_as_ints: false
                preserve_proto_field_names: false
          - name: envoy.router

  clusters:
  - name: grpcserver
    connect_timeout: 5s
    type: logical_dns
    lb_policy: round_robin
    dns_lookup_family: V4_ONLY
    http2_protocol_options: {}
    hosts:
    - socket_address:
        address: host.docker.internal
        port_value: 8080
